# atm0s-sdn-visualization

./: .gitignore  Cargo.toml  rustfmt.toml
atm0s-sdn-visualization-app/: .eslintrc.cjs  index.html  package-lock.json  package.json
atm0s-sdn-visualization-app/src/: App.tsx
atm0s-sdn-visualization-app/src/common/: config.ts
atm0s-sdn-visualization-app/src/modules/: index.ts
atm0s-sdn-visualization-app/src/modules/network-graph/: hooks.ts  index.tsx  service.ts  store.ts
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx
client/src/common/: config.ts
client/src/modules/sdn-visualization/: graph.controller.ts  index.tsx  services.ts
client/src/modules/sdn-visualization/components/: node-detail-info.tsx
client/src/modules/sdn-visualization/entity/: index.ts
examples/: multi-protocols.rs  sample.rs  simple-visualization.rs
public/: index.html  index.js  styles.css
public/assets/: index-DCVgxivF.css  index-Dae4vuaO.js  index-DyhjhwG-.js
src/: lib.rs
src/api/: http_server.rs  mod.rs
src/api/routes/: node.rs
src/collector/: controller.rs  mod.rs  storage.rs
src/identity/: conn.rs  mod.rs
src/service/: behaviour.rs  handler.rs  logic.rs  mod.rs  msg.rs  sdk.rs
src/service/controller/: agent.rs  collector.rs  mod.rs
src/service/store/: graph.rs  mod.rs
src/services/: mod.rs
src/services/agent/: behaviour.rs  handler.rs  logic.rs  mod.rs  msg.rs
src/services/agent/storage/: connection.rs  mod.rs
src/services/master/: behaviour.rs  controller.rs  handler.rs  logic.rs  mod.rs  msg.rs  sdk.rs
src/services/master/storage/: mod.rs  node.rs  transport.rs
src/util/: mod.rs
