[package]
name = "atm0s-sdn-visualization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atm0s-sdn-network = "0.3.1"
atm0s-sdn-identity = "0.2.0"
atm0s-sdn-utils = "0.1.1"
atm0s-sdn-router = "0.1.4"
async-trait = "0.1"
async-std = { version = "1.12", features = ["unstable", "attributes"] }
async-notify = "0.2"
serde = { version = "1.0", features = ["derive"] }
parking_lot = "0.12"
env_logger = "0.11.1"
log = "0.4"

[dev-dependencies]
atm0s-sdn = { features = ["all"], version = "0.1.7" }
clap = { version = "4.4.14", features = ["derive", "env"] }
reedline-repl-rs = { version = "1.0.7", features = ["async"] }
